// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.infra.esgateway;
option go_package = "github.com/chef/automate/api/config/esgateway";
import "api/config/shared/global.proto";
import "api/config/shared/tls.proto";
import "components/automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "automate-es-gateway"};

	V1 v1 = 1;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			chef.automate.infra.config.TLSCredentials tls = 2;

    		Service service = 3;
			Log log = 4;
			Nginx ngx = 5;
			External external = 6; // Derived from global config

			message Service {
				google.protobuf.StringValue host = 1;
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10144, protocol: "http" } ];
			}

			message Log {
				google.protobuf.StringValue level = 1;
			}

			message Nginx {
				Main main = 1;
				Events events = 2;
				Http http = 3;

				message Main {
					google.protobuf.Int32Value worker_processes = 1;
					google.protobuf.Int32Value max_fails = 2;
				}

				message Events {
					google.protobuf.Int32Value worker_connections = 1;
				}

				message Http {
					google.protobuf.StringValue client_max_body_size = 1;
					google.protobuf.Int32Value proxy_connect_timeout = 2;
					google.protobuf.Int32Value keepalive_timeout = 3;
					google.protobuf.StringValue gzip = 4;
					google.protobuf.StringValue gzip_http_version = 5;
					// StringValue for consitency with other nginx configs
					google.protobuf.StringValue gzip_comp_level = 6;
					google.protobuf.StringValue gzip_proxied = 7;
					google.protobuf.StringValue gzip_types = 8;
					google.protobuf.StringValue sendfile = 9;
					google.protobuf.StringValue tcp_nodelay = 10;
					google.protobuf.StringValue tcp_nopush = 11;
					google.protobuf.StringValue ssl_ciphers = 12;
					google.protobuf.StringValue ssl_protocols = 13;
					reserved 14;
					google.protobuf.Int32Value ssl_verify_depth = 15;
					google.protobuf.Int32Value server_names_hash_bucket_size = 16;
					google.protobuf.StringValue client_body_buffer_size = 17;
					google.protobuf.Int32Value proxy_read_timeout = 18;
					google.protobuf.Int32Value proxy_send_timeout = 19;
				}

			}

			message External {
				google.protobuf.BoolValue enable = 1;
				google.protobuf.BoolValue ssl_upstream = 2;
				repeated google.protobuf.StringValue endpoints = 3;
				google.protobuf.StringValue basic_auth_credentials = 4;
				google.protobuf.StringValue root_cert = 5;
				google.protobuf.StringValue server_name = 6;
				google.protobuf.StringValue root_cert_file = 7;
			}
		} // System

		message Service {}
	} // V1
}
